--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="stylesheet" href="/css/reset.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="/js/main.js"></script>
+	<title>2210787 | Interactive rating component</title>
 </head>
 <body>
 
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+	<main>
+		<div class="contentMain">
+			<div class="contentWrap">
+  			<!-- Rating state start -->
+				<div class="ratingState">
+					<div class="starIcon">
+						<img src="/images/icon-star.svg" alt="">
+					</div>
+					<h1 class="heading01">
+						How did we do?
+					</h1>
+					<div class="contentInner">
+						<div class="paragTxt">
+							Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+						</div>
+						<ul class="ratingWrap">
+							<li class="ratingCircle" data-rating="1"><span>1</span></li>
+							<li class="ratingCircle" data-rating="2"><span>2</span></li>
+							<li class="ratingCircle" data-rating="3"><span>3</span></li>
+							<li class="ratingCircle" data-rating="4"><span>4</span></li>
+							<li class="ratingCircle" data-rating="5"><span>5</span></li>
+						</ul>
+						<button class="submitBtn">Submit</button>
+					</div>
+				</div>
+			 <!-- Rating state end -->
+			 <!-- thank you state start -->
+				<div class="submittedState">
+					<div class="csVisual">
+						<img src="/images/illustration-thank-you.svg" alt="">
+					</div>
+					<p class="ratingResult" id="ratingResult"></p>
+					<h1 class="heading01">Thank you!</h1>
+					<p class="paragTxt">We appreciate you taking the time to give a rating.<br class="pcOnly"> If you ever need more support, don’t hesitate to get in touch!</p>
+				</div>
+			<!-- thank you state end -->
+			</div>
+		</div>
+	</main>
 </body>
 </html>
+
